force-app/main/default/objects/report_sender__Schedule_Log__c/report_sender__Schedule_Log__c.object-meta.xml
<CustomObject>
    <description>Custom object which storing data about Report sending errors.</description>
    <label>Schedule Log</label>
    <nameField>
        <label>Schedule Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>