force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Email_Tracking__c</fullName>
    <description>to track emails by Id</description>
    <label>Email Tracking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>