force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Error_Details__c</fullName>
    <description>Error detailed log</description>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>