force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Execution_date__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Execution_date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>