force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__First_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>report_sender__First_Open_Date__c</fullName>
    <description>track first opening</description>
    <label>First Open Date</label>
    <type>DateTime</type>
</CustomField>