force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Is_Opened__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Is_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to track if email is opened</description>
    <label>Is Opened</label>
    <type>Checkbox</type>
</CustomField>