force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Open_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>to show how much times customers have opened email</description>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>