force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Report_Id__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Report_Id__c</fullName>
    <label>Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>