force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Schedule_Name__c</fullName>
    <label>Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>