force-app/main/default/objects/report_sender__Schedule_Log__c/fields/report_sender__Status__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>