force-app/main/default/objects/report_sender__Schedule_Log__c/listViews/report_sender__All.listView-meta.xml
<ListView>
    <fullName>report_sender__All</fullName>
    <columns>NAME</columns>
    <columns>report_sender__Schedule_Name__c</columns>
    <columns>report_sender__Email_Data__c</columns>
    <columns>report_sender__Status__c</columns>
    <columns>report_sender__Execution_date__c</columns>
    <columns>report_sender__Report_Id__c</columns>
    <columns>report_sender__Error_Details__c</columns>
    <columns>report_sender__Error_reason__c</columns>
    <columns>report_sender__Is_Opened__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>